--- a/descriptor.conf
+++ b/descriptor.conf
@@ -19,23 +19,25 @@ name=lb1
 username=lb1
 password=123
 ip=
-
+port=
 
 [VM2]
 name=fw1
 username=fw1
 password=123
 ip=
+port=
 
 [VM3]
 name=fw2
 username=fw2
 password=123
 ip=
+port=
 
 [VM4]
 name=db1
 username=db1
 password=123
 ip=
-
+port=
