--- a/descriptor.conf
+++ b/descriptor.conf
@@ -3,7 +3,47 @@
 [VM]
 vmnumber=4
 
-# SECTION 2 To get the scenario
+# SECTION 2 To get what type of communication
+#communication
+#communication=socket
+#communication=queue
+
+communication=socket
+
+# SECTION 3 VM Specification
+# pin=ip:port
+# with note that one IP for one VM
+
+[vm1]
+name=lb1
+username=lb1
+password=123
+pinA=
+pinB
+
+[vm2]
+name=fw1
+username=fw1
+password=123
+pinA=
+pinB=
+
+[vm3]
+name=fw2
+username=fw2
+password=123
+pinA=
+pinB=
+
+[vm4]
+name=db1
+username=db1
+password=123
+pinA=
+pinB=
+
+
+# SECTION 4 To get the scenario
 # available components: LoadBalancer, Forwarder, DBServer
 
 [Scenario]
@@ -12,32 +52,9 @@ vm2=Forwarder
 vm3=Forwarder
 vm4=DBServer
 
-# VM Specification
+[Connectivity]
+net1=vm1.pinA,vm2.pinA
+net2=vm1.pinB,vm3.pinA
+net3=vm2.pinB,vm4.pinA
+net4=vm3.pinB,vm4.pinB
 
-[VM1]
-name=lb1
-username=lb1
-password=123
-ip=
-port=
-
-[VM2]
-name=fw1
-username=fw1
-password=123
-ip=
-port=
-
-[VM3]
-name=fw2
-username=fw2
-password=123
-ip=
-port=
-
-[VM4]
-name=db1
-username=db1
-password=123
-ip=
-port=
