--- a/descriptor.conf
+++ b/descriptor.conf
@@ -1,6 +1,6 @@
 # SECTION 1  To get how many virtual machines and the scenario 
 
-[VM]
+[vm]
 vmnumber=4
 
 # SECTION 2 To get what type of communication
@@ -19,7 +19,7 @@ name=lb1
 username=lb1
 password=123
 pinA=
-pinB
+pinB=
 
 [vm2]
 name=fw1
@@ -46,13 +46,13 @@ pinB=
 # SECTION 4 To get the scenario
 # available components: LoadBalancer, Forwarder, DBServer
 
-[Scenario]
+[scenario]
 vm1=LoadBalancer
 vm2=Forwarder
 vm3=Forwarder
 vm4=DBServer
 
-[Connectivity]
+[connectivity]
 net1=vm1.pinA,vm2.pinA
 net2=vm1.pinB,vm3.pinA
 net3=vm2.pinB,vm4.pinA
