--- a/descriptor.conf
+++ b/descriptor.conf
@@ -1,16 +1,13 @@
-# SECTION 1  To get how many virtual machines and the scenario 
-
-[vm]
-vmnumber=4
-
-# SECTION 2 To get what type of communication
+# PART 1  To get how many virtual machines and  what type of communication
 #communication
 #communication=socket
 #communication=queue
 
+[vm]
+vmnumber=4
 communication=socket
 
-# SECTION 3 VM Specification
+# PART 2 VM Specification
 # pin=ip:port
 # with note that one IP for one VM
 
@@ -18,32 +15,44 @@ communication=socket
 name=lb1
 username=lb1
 password=123
-pinA=
-pinB=
+memory=20480
+CPU=2
+disk=100
+pinA=192.168.100.123:8012
+pinB=192.168.100.123:8013
 
 [VM2]
 name=fw1
 username=fw1
 password=123
-pinA=
-pinB=
+memory=15000
+CPU=2
+disk=100
+pinA=192.168.100.124:8012
+pinB=192.168.100.124:8013
 
 [VM3]
 name=fw2
 username=fw2
 password=123
-pinA=
-pinB=
+memory=15000
+CPU=2
+disk=100
+pinA=192.168.100.126:8012
+pinB=192.168.100.126:8013
 
 [VM4]
 name=db1
 username=db1
 password=123
-pinA=
-pinB=
+memory=20480
+CPU=3
+disk=450
+pinA=192.168.100.128:8012
+pinB=192.168.100.128:8013
 
 
-# SECTION 4 To get the scenario
+# PART 3 To get the scenario
 # available components: LoadBalancer, Forwarder, DBServer
 
 [scenario]
