--- a/ansible/roles/uploadscript/tasks/main.yml
+++ b/ansible/roles/uploadscript/tasks/main.yml
@@ -1,3 +1,5 @@
+---
+# tasks file for uploadscript
 - name: create directory in target host
   tasks:
     - file:
@@ -6,8 +8,6 @@
         mode: 0755
 
 - name: copying the component script to the target host
-  copy:
+  copy: 
     src: /home/ccma/test/Synthesizer/ansible/roles/uploadscript/files
     dest: /home/synthesizer/components
-
-
