new roles for running the service

--- a/descriptor.conf
+++ b/descriptor.conf
@@ -18,8 +18,9 @@ password=123
 memory=20480
 CPU=2
 disk=100
-pinA=192.168.100.123:8012
-pinB=192.168.100.123:8013
+ip=192.168.100.123
+#pinA=192.168.100.123:8012
+#pinB=192.168.100.123:8013
 
 [VM2]
 name=fw1
@@ -28,8 +29,9 @@ password=123
 memory=15000
 CPU=2
 disk=100
-pinA=192.168.100.124:8012
-pinB=192.168.100.124:8013
+ip=192.168.100.124
+#pinA=192.168.100.124:8012
+#pinB=192.168.100.124:8013
 
 [VM3]
 name=fw2
@@ -38,8 +40,9 @@ password=123
 memory=15000
 CPU=2
 disk=100
-pinA=192.168.100.126:8012
-pinB=192.168.100.126:8013
+ip=192.168.100.126
+#pinA=192.168.100.126:8012
+#pinB=192.168.100.126:8013
 
 [VM4]
 name=db1
@@ -48,8 +51,9 @@ password=123
 memory=20480
 CPU=3
 disk=450
-pinA=192.168.100.128:8012
-pinB=192.168.100.128:8013
+ip=192.168.100.128
+#pinA=192.168.100.128:8012
+#pinB=192.168.100.128:8013
 
 
 # PART 3 To get the scenario
@@ -61,9 +65,9 @@ vm2=Forwarder
 vm3=Forwarder
 vm4=DBServer
 
-[connectivity]
-net1=vm1.pinA,vm2.pinA
-net2=vm1.pinB,vm3.pinA
-net3=vm2.pinB,vm4.pinA
-net4=vm3.pinB,vm4.pinB
+#[connectivity]
+#net1=vm1.pinA,vm2.pinA
+#net2=vm1.pinB,vm3.pinA
+#net3=vm2.pinB,vm4.pinA
+#net4=vm3.pinB,vm4.pinB
 
