modified descriptor file and mainparser

--- a/descriptor.conf
+++ b/descriptor.conf
@@ -3,7 +3,7 @@
 #communication=socket
 #communication=queue
 
-[vm]
+[VM]
 vmnumber=4
 communication=socket
 
@@ -49,7 +49,7 @@ ip=192.168.100.128
 # PART 3 To get the scenario
 # available components: LoadBalancer, Forwarder, DBServer
 
-[scenario]
+[Scenario]
 vm1=LoadBalancer
 vm2=Forwarder
 vm3=Forwarder
